# foveran

./: Foveran.cabal
src/Data/: BooleanAlgebra.hs  RangeSet.hs  SExpr.hs
src/Data/FiniteStateMachine/: RegexpDerivatives.hs
src/Language/Foveran/: Parsing.hs
src/Language/Foveran/Typing/: DeclCheckMonad.hs  Errors.hs  Hole.hs
src/Language/Foveran/Util/: PrettyPrinting.hs
src/Text/: ParserCombinators.hs  PrettyPrintPrec.hs
